--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   <div class="accordion-body">
                     <strong>
                       <div class="image">
-                        <img src="images/leaf.jpg" alt="웹사이트 이미지" class="img-fluid">
+                        <img src="leaf.jpg" alt="웹사이트 이미지" class="img-fluid">
                     </div>
                       지구, 행성을 뜻하는 'Planet'과 교환을 뜻하는 'Swap'이 합쳐진걸로, 교환을 통해 지구의 환경에 변화를 주자는 의미가 담겨져 있습니다. 
                       마찬가지로, Planet Swap 사이트는 사용자들의 물물교환을 돕고, 더불어 환경 아이템 소개나, 팀 공유 등 다양한 커뮤니티 활동들을 포함하여 환경보호에 관심을 가질 수 있도록 돕습니다.
@@ -121,7 +121,7 @@
                   <div class="accordion-body">
                     <strong>
                       <div class="image">
-                        <img src="images/trash.jpg" alt="웹사이트 이미지" class="img-fluid">
+                        <img src="trash.jpg" alt="웹사이트 이미지" class="img-fluid">
                     </div> 
                     하나부터 열까지 산업화된 시대에서 지구의 수명이 짧아지고 있는 가운데, 사람들은 제 삶 살기에도 바빠 지구의 병을 간과하고는 합니다. 
                     무작정 환경오염의 심각성과 환경보호에 대한 정보를 다루는 웹사이트보다는, 환경보호에 선영향을 주면서도 사람들이 관심을 가질만한 주제를 채택하여 웹사이트를 기획하다보니 '물물교환'을 주제로 한 웹사이트를 개발하게 되었습니다. 
@@ -137,7 +137,7 @@
                 <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
                     <strong> <div class="image">
-                      <img src="images/hand.jpg" alt="웹사이트 이미지" class="img-fluid">
+                      <img src="hand.jpg" alt="웹사이트 이미지" class="img-fluid">
                   </div> 
                   '그저 필요없는 자원을 남에게 주고, 필요했던 자원을 얻었을 뿐인데. 돈을 조금 아끼려고 유용한 재활용 팁들을 찾아본 것 뿐인데. 이게 모두 환경보호였다고?'
                   환경보호는 멀리 있지 않고 나에게 아주 가깝다는 것. 보다 쉽고 간편하게 환경보호에 힘을 쓸 수 있다는 것을 사람들에게 알리는 것이 사이트의 목적입니다. 
@@ -159,7 +159,7 @@
       <div class="row">
         <div class="col-md-6 mb-4">
           <div class="card">
-            <img src="images/idea.jpg" class="card-img-top" alt="...">
+            <img src="idea.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">팁 공유</h5>
               <p class="card-text">이 페이지에서는 친환경과 관련된 도움이 될 수 있는 여러 아이디어를 공유할 수 있습니다.</p>
@@ -169,7 +169,7 @@
         </div>
         <div class="col-md-6 mb-4">
           <div class="card">
-            <img src="images/item.jpg" class="card-img-top" alt="...">
+            <img src="item.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">아이템 소개</h5>
               <p class="card-text">이 페이지에서는 여러 친환경 아이템들을 소개받을 수 있습니다.</p>
@@ -179,7 +179,7 @@
         </div>
         <div class="col-md-12 mb-4">
           <div class="card">
-            <img src="images/exchange.jpg" class="card-img-top" alt="...">
+            <img src="exchange.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">물물교환</h5>
               <p class="card-text">이 페이지에서는 사람들과 물물교환을 진행할 수 있습니다.</p>
