--- a/items.html
+++ b/items.html
@@ -75,7 +75,7 @@
               <div class="col-md-4">
                   <!-- 이미지와 오버레이를 포함하는 컨테이너 -->
                   <div class="image-container">
-                      <img src="images/mul.jpg" alt="..." class="img-fluid">
+                      <img src="mul.jpg" alt="..." class="img-fluid">
                       <!-- 오버레이 텍스트 -->
                       <div class="overlay">
                         <p class="lh-lg"><a href="https://www.neogift.kr/goods/goods_view.php?goodsNo=1000003066" class="btn btn-light"><i class="fas fa-arrow-right"></i> 바로가기</a></p>
@@ -99,7 +99,7 @@
                     <div class="col-md-4">
                  <!-- 이미지와 오버레이를 포함하는 컨테이너 -->
                  <div class="image-container">
-                  <img src="images/coffee.jpg" alt="..." class="img-fluid">
+                  <img src="coffee.jpg" alt="..." class="img-fluid">
                   <!-- 오버레이 텍스트 -->
                   <div class="overlay">
                     <p class="lh-lg"><a href="https://www.neogift.kr/goods/goods_view.php?goodsNo=1000002323" class="btn btn-light"><i class="fas fa-arrow-right"></i> 바로가기</a></p>
@@ -114,7 +114,7 @@
               <div class="col-md-4">
                   <!-- 이미지와 오버레이를 포함하는 컨테이너 -->
                   <div class="image-container">
-                      <img src="images/note.jpg" alt="..." class="img-fluid">
+                      <img src="note.jpg" alt="..." class="img-fluid">
                       <!-- 오버레이 텍스트 -->
                       <div class="overlay">
                         <p class="lh-lg"><a href="https://www.neogift.kr/goods/goods_view.php?goodsNo=22121" class="btn btn-light"><i class="fas fa-arrow-right"></i> 바로가기</a></p>
