--- a/tips.html
+++ b/tips.html
@@ -116,7 +116,7 @@
             <div class="embed-responsive embed-responsive-16by9">
                 <div class="row justify-content-center">
                 <video class="embed-responsive-item" controls>
-                    <source src="images/video.mp4" type="video/mp4">
+                    <source src="video.mp4" type="video/mp4">
                 </video>
           </div>
           <div class="card-footer">
@@ -140,7 +140,7 @@
             <div class="embed-responsive embed-responsive-16by9">
                 <div class="row justify-content-center">
                 <video class="embed-responsive-item" controls>
-                    <source src="images/trash.mp4" type="video/mp4">
+                    <source src="trash.mp4" type="video/mp4">
                 </video>
           </div>
           <div class="card-footer">
@@ -161,7 +161,7 @@
     <div class="row justify-content-center">
         <div class="col-md-8">
         <div class="card">
-            <img src="images/paper.jpg" class="card-img-top" alt="...">
+            <img src="paper.jpg" class="card-img-top" alt="...">
              <div class="card-footer">
                 <h2>제목: 혹시 썸네일처럼 종이가 쌓여있다면? </h2>
                  <p>종이 아까우니 버리지 말고 재활용하세요. ^^
