--- a/exchange.html
+++ b/exchange.html
@@ -108,13 +108,13 @@
   <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/gudu.jpg" class="d-block w-100" alt="...">
+        <img src="gudu.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="images/bear.jpg" class="d-block w-100" alt="...">
+        <img src="bear.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="images/pig.jpg" class="d-block w-100" alt="...">
+        <img src="pig.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -135,7 +135,7 @@
     <div class="row justify-content-center">
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="images/baby.jpg" class="card-img-top" alt="...">
+          <img src="baby.jpg" class="card-img-top" alt="...">
           <div class="card-img-overlay d-flex align-items-center">
             <div class="card-text">
               <p><button type="button" class="btn btn-light"><i class="fas fa-comment"></i> 채팅하기</button></p>
@@ -152,7 +152,7 @@
       </div>
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="images/darimi.jpg" class="card-img-top" alt="...">
+          <img src="darimi.jpg" class="card-img-top" alt="...">
           <div class="card-img-overlay d-flex align-items-center">
             <div class="card-text">
               <p><button type="button" class="btn btn-light"><i class="fas fa-comment"></i> 채팅하기</button></p>
@@ -170,7 +170,7 @@
     <div class="row justify-content-center">
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="images/seam.jpg" class="card-img-top" alt="...">
+          <img src="seam.jpg" class="card-img-top" alt="...">
           <div class="card-img-overlay d-flex align-items-center">
             <div class="card-text">
               <p><button type="button" class="btn btn-light"><i class="fas fa-comment"></i> 채팅하기</button></p>
@@ -184,7 +184,7 @@
       </div>
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="images/softball.jpg" class="card-img-top" alt="...">
+          <img src="softball.jpg" class="card-img-top" alt="...">
           <div class="card-img-overlay d-flex align-items-center">
             <div class="card-text">
               <p><button type="button" class="btn btn-light"><i class="fas fa-comment"></i> 채팅하기</button></p>
@@ -202,7 +202,7 @@
     <div class="row justify-content-center">
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="images/football.jpg" class="card-img-top" alt="...">
+          <img src="football.jpg" class="card-img-top" alt="...">
           <div class="card-img-overlay d-flex align-items-center">
             <div class="card-text">
               <p><button type="button" class="btn btn-light"><i class="fas fa-comment"></i> 채팅하기</button></p>
@@ -216,7 +216,7 @@
       </div>
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="images/cube.jpg" class="card-img-top" alt="...">
+          <img src="cube.jpg" class="card-img-top" alt="...">
           <div class="card-img-overlay d-flex align-items-center">
             <div class="card-text">
               <p><button type="button" class="btn btn-light"><i class="fas fa-comment"></i> 채팅하기</button></p>
