--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
             <!-- 왼쪽에 이미지 -->
             <div class="col-md-4">
               <!--소개 제목-->
-       <h1 style="margin-top: 150px><h1 class="display-5 fw-bold mb-">소개</h1></h1>
+       <h1 style="margin-top: 150px;" class="display-5 fw-bold mb-">소개</h1>
+
         <p class="h6"></p>
             <!--아코디언 항목들-->
             </div>
