--- a/index.html
+++ b/index.html
@@ -83,71 +83,72 @@
     
     
     <body>
-      <section>
-      <div class="container py-5">
-        <div class="row">
-            <!-- 왼쪽에 이미지 -->
-            <div class="col-md-4">
-              <!--소개 제목-->
-       <h1 style="margin-top: 150px;" class="display-5 fw-bold mb-">소개</h1>
-
+     <section>
+  <div class="container py-5">
+    <div class="row">
+      <!-- 왼쪽에 이미지 -->
+      <div class="col-md-4">
+        <h1 style="margin-top: 150px;" class="display-5 fw-bold mb-">소개</h1>
         <p class="h6"></p>
-            <!--아코디언 항목들-->
-            </div>
-            <div class="accordion" id="accordionExample">
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    PlaetSwap이란?
-                  </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <strong>
-                      <div class="image">
-                        <img src="leaf.jpg" alt="웹사이트 이미지" class="img-fluid">
-                    </div>
-                      지구, 행성을 뜻하는 'Planet'과 교환을 뜻하는 'Swap'이 합쳐진걸로, 교환을 통해 지구의 환경에 변화를 주자는 의미가 담겨져 있습니다. 
-                      마찬가지로, Planet Swap 사이트는 사용자들의 물물교환을 돕고, 더불어 환경 아이템 소개나, 팀 공유 등 다양한 커뮤니티 활동들을 포함하여 환경보호에 관심을 가질 수 있도록 돕습니다.
-                  </div>
+        <!-- 아코디언 항목들 -->
+      </div>
+      <div class="accordion col-md-8" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Planet Swap이란?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>
+                <div class="image">
+                  <img src="leaf.jpg" alt="웹사이트 이미지" class="img-fluid">
                 </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    사이트가 만들어진 계기는?
-                  </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <strong>
-                      <div class="image">
-                        <img src="trash.jpg" alt="웹사이트 이미지" class="img-fluid">
-                    </div> 
-                    하나부터 열까지 산업화된 시대에서 지구의 수명이 짧아지고 있는 가운데, 사람들은 제 삶 살기에도 바빠 지구의 병을 간과하고는 합니다. 
-                    무작정 환경오염의 심각성과 환경보호에 대한 정보를 다루는 웹사이트보다는, 환경보호에 선영향을 주면서도 사람들이 관심을 가질만한 주제를 채택하여 웹사이트를 기획하다보니 '물물교환'을 주제로 한 웹사이트를 개발하게 되었습니다. 
-                  </div>
-                  </div>
-                  </div>
-             <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    사이트의 목적은?
-                  </button>
-                </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <strong> <div class="image">
-                      <img src="hand.jpg" alt="웹사이트 이미지" class="img-fluid">
-                  </div> 
-                  '그저 필요없는 자원을 남에게 주고, 필요했던 자원을 얻었을 뿐인데. 돈을 조금 아끼려고 유용한 재활용 팁들을 찾아본 것 뿐인데. 이게 모두 환경보호였다고?'
-                  환경보호는 멀리 있지 않고 나에게 아주 가깝다는 것. 보다 쉽고 간편하게 환경보호에 힘을 쓸 수 있다는 것을 사람들에게 알리는 것이 사이트의 목적입니다. 
-                  </div>
-                </div>
-              </div>
+                지구, 행성을 뜻하는 'Planet'과 교환을 뜻하는 'Swap'이 합쳐진걸로, 교환을 통해 지구의 환경에 변화를 주자는 의미가 담겨져 있습니다. 마찬가지로, Planet Swap 사이트는 사용자들의 물물교환을 돕고, 더불어 환경 아이템 소개나, 팀 공유 등 다양한 커뮤니티 활동들을 포함하여 환경보호에 관심을 가질 수 있도록 돕습니다.
+              </strong>
             </div>
-</div>
-</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              사이트가 만들어진 계기는?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>
+                <div class="image">
+                  <img src="trash.jpg" alt="웹사이트 이미지" class="img-fluid">
+                </div>
+                하나부터 열까지 산업화된 시대에서 지구의 수명이 짧아지고 있는 가운데, 사람들은 제 삶 살기에도 바빠 지구의 병을 간과하고는 합니다. 무작정 환경오염의 심각성과 환경보호에 대한 정보를 다루는 웹사이트보다는, 환경보호에 선영향을 주면서도 사람들이 관심을 가질만한 주제를 채택하여 웹사이트를 기획하다보니 '물물교환'을 주제로 한 웹사이트를 개발하게 되었습니다.
+              </strong>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              사이트의 목적은?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>
+                <div class="image">
+                  <img src="hand.jpg" alt="웹사이트 이미지" class="img-fluid">
+                </div>
+                '그저 필요없는 자원을 남에게 주고, 필요했던 자원을 얻었을 뿐인데. 돈을 조금 아끼려고 유용한 재활용 팁들을 찾아본 것 뿐인데. 이게 모두 환경보호였다고?' 환경보호는 멀리 있지 않고 나에게 아주 가깝다는 것. 보다 쉽고 간편하게 환경보호에 힘을 쓸 수 있다는 것을 사람들에게 알리는 것이 사이트의 목적입니다.
+              </strong>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 </section>
 <!--곧바로 이동함-->
 <section>
